[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fincept-terminal"
version = "0.1.0"
description = "An open-source financial terminal for market data, analysis, and research"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Fincept Corporation", email = "support@fincept.in" }
]
keywords = ["finance", "terminal", "market-data", "stocks", "trading", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Environment :: Console",
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotext>=5.2.8",
    "yfinance>=0.2.36",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/Fincept-Corporation/FinceptTerminal"
Documentation = "https://docs.fincept.in"
Repository = "https://github.com/Fincept-Corporation/FinceptTerminal"
"Bug Tracker" = "https://github.com/Fincept-Corporation/FinceptTerminal/issues"

[project.scripts]
fincept = "fincept_terminal.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fincept_terminal" = ["*.toml", "*.css", "assets/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN"]
# Relaxing annotation rules a bit for personal use - ANN001/ANN201 are noisy during exploration
ignore = ["ANN101", "ANN102", "ANN001", "ANN201"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so a plain `pytest` run doesn't require coverage installed
# -p no:warnings keeps output clean while exploring the codebase
# Removed -x so the full test suite runs and I can see all failures at once
addopts = "-v -p no:warnings"

[tool.coverage.run]
source = ["src/fincept_terminal"]
omit = ["tests/*", "**/__main__.py"]
